# Antigravity-Proxy

./: .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: __init__.py  routes_auth.py  routes_claude.py  routes_gemini.py  routes_images.py  routes_import.py  routes_management.py  routes_mapping.py  routes_oauth.py  routes_openai.py  routes_quota.py  routes_stats.py
backend/app/core/: auth.py  database.py  oauth.py  token_manager.py  usage_logger.py
backend/app/core/proxy/: __init__.py  claude_mapper.py  claude_models.py  claude_response_mapper.py  openai_mapper.py  openai_models.py  response_mapper.py  upstream.py
backend/app/models/: __init__.py  account.py  image.py  mapping.py  usage.py  user.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx
frontend/src/pages/: Accounts.tsx  ApiProxy.tsx  Dashboard.tsx  ImageGen.tsx  Login.tsx  Settings.tsx  Statistics.tsx
frontend/src/services/: api.ts
frontend/src/stores/: useAccountStore.ts  useAuthStore.ts
frontend/src/types/: account.ts
tools/: oauth_relay.py
